# slhs

./: Cargo.toml  readme.md
.zed/: settings.json
src/: lib.rs
